--- a/angular-build/html/heroes-component.html
+++ b/angular-build/html/heroes-component.html
@@ -1,18 +1,31 @@
-<div *ngIf="selectedHero">
+<!--<div *ngIf="selectedHero">-->
 
-    <h2>{{selectedHero.name | uppercase}} Details</h2>
-    <div><span>id: </span>{{selectedHero.id}}</div>
-    <div>
-        <label>name:
-            <input [(ngModel)]="selectedHero.name" placeholder="name">
-        </label>
-    </div>
+    <!--<h2>{{selectedHero.name | uppercase}} Details</h2>-->
+    <!--<div><span>id: </span>{{selectedHero.id}}</div>-->
+    <!--<div>-->
+        <!--<label>name:-->
+            <!--<input [(ngModel)]="selectedHero.name" placeholder="name">-->
+        <!--</label>-->
+    <!--</div>-->
 
-</div>
+<!--</div>-->
+
+<!--<h2>My Heroes</h2>-->
+<!--<ul class="heroes">-->
+    <!--<li [class.selected]="hero === selectedHero" *ngFor="let hero of heroes" (click)="onSelect(hero)">-->
+        <!--<span class="badge">{{hero.id}}</span> {{hero.name}}-->
+    <!--</li>-->
+<!--</ul>-->
+
 
 <h2>My Heroes</h2>
+
 <ul class="heroes">
-    <li [class.selected]="hero === selectedHero" *ngFor="let hero of heroes" (click)="onSelect(hero)">
+    <li *ngFor="let hero of heroes"
+        [class.selected]="hero === selectedHero"
+        (click)="onSelect(hero)">
         <span class="badge">{{hero.id}}</span> {{hero.name}}
     </li>
 </ul>
+
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
