--- a/angular-build/index.html
+++ b/angular-build/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <base href="/angular-build/">
     <meta charset="UTF-8">
     <title>Angular 6 with Scala.js</title>
 
@@ -12,6 +13,7 @@
     <script src="node_modules/@angular/core/bundles/core.umd.js"></script>
     <script src="node_modules/@angular/common/bundles/common.umd.js"></script>
     <script src="node_modules/@angular/compiler/bundles/compiler.umd.js"></script>
+    <script src="node_modules/@angular/router/bundles/router.umd.js"></script>
     <script src="node_modules/@angular/platform-browser/bundles/platform-browser.umd.js"></script>
     <script src="node_modules/@angular/platform-browser-dynamic/bundles/platform-browser-dynamic.umd.js"></script>
     <script src="node_modules/@angular/forms/bundles/forms.umd.js"></script> <!-- has to be after platform-browser! -->
